--- a/szamlazz-frontend/src/index.html
+++ b/szamlazz-frontend/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded">
   <meta charset="utf-8">
   <title>SzamlazzFrontend</title>
   <base href="/">
